# heart2heart

./: .firebaserc  README.md  firebase.json  firestore.rules
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase.yml
functions/: package-lock.json  package.json
functions/src/: index.ts
telegrambot/: .gitignore  README.md  pyproject.toml
telegrambot/telegrambot/: main.py
telegrambot/tests/: deeplinking.md  deeplinkingexample.py  test_telegrambot.py
web/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
web/archived/: Login.css
web/archived/components/: Deck.css  DeckItem.tsx
web/archived/components/Forms/: LoginForm.tsx  SignupForm.tsx
web/archived/components/Layout/: Footer.tsx  NavBar.tsx  SideNav.tsx
web/archived/pages/: LandingPage.tsx  SessionDetailsPage.tsx  SessionsPage.tsx
web/public/: index.html
web/src/: App.css  App.tsx  index.css  index.tsx
web/src/components/: Deck.tsx  Footer.tsx  Header.tsx  LandingPage.tsx  Login.css  Login.tsx  SignUpModal.tsx  utils.ts
web/src/components/Buttons/: PrimaryBtn.tsx
web/src/components/Cards/: PreviewCard.tsx  SessionCard.tsx
web/src/components/Forms/: LoginForm.tsx  SignupForm.tsx
web/src/components/Hooks/: FirebaseAuthStatus.tsx
web/src/components/Layout/: Content.tsx
web/src/components/Main/: LandingPage.tsx  RegisterCompletePage.tsx
web/src/components/Pages/: LandingPage.tsx  (+4 more)
web/src/config/: firebaseConfig.ts
web/src/pages/: LandingPage.tsx  PrivacyPage.tsx
web/src/stores/: index.ts
web/src/util/: constants.ts
(+5 files in other folders)
